--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.1.1",
