--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
