--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
@@ -21,7 +22,8 @@
     "react-type-animation": "^3.1.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
