--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "clsx": "^2.0.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
