--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-type-animation": "^3.1.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
