--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
     "formik": "^2.4.3",
+    "moment": "^2.29.4",
     "rc-tween-one": "^3.0.6",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
